fixed school overflow for admin dropdown

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -117,6 +117,36 @@ body {
   opacity: 0.2 !important;
 }
 
+.ant-dropdown-menu-submenu-popup {
+  max-height: 300px !important;
+  overflow-y: auto;
+  
+  /* For modern browsers */
+  scrollbar-width: thin;
+  scrollbar-color: #d9d9d9 transparent;
+  
+  /* For IE and Edge */
+  -ms-overflow-style: none;
+  
+  /* For Webkit browsers (Chrome, Safari) */
+  &::-webkit-scrollbar {
+    width: 4px;
+  }
+  
+  &::-webkit-scrollbar-track {
+    background: transparent;
+  }
+  
+  &::-webkit-scrollbar-thumb {
+    background-color: #d9d9d9;
+    border-radius: 4px;
+    
+    &:hover {
+      background-color: #bfbfbf;
+    }
+  }
+}
+
 @-webkit-keyframes nprogress-spinner {
   0% {
     -webkit-transform: rotate(0deg);
